--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "typescript": "^5",
