--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.22.7",
     "@clerk/nextjs": "^6.9.9",
+    "@types/react-big-calendar": "^1.16.0",
+    "clsx": "^2.1.1",
+    "moment": "^2.30.1",
     "next": "15.1.4",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.2",
