--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/elements": "^0.22.7",
     "@clerk/nextjs": "^6.9.9",
+    "@hookform/resolvers": "^3.10.0",
     "@types/react-big-calendar": "^1.16.0",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
@@ -19,8 +20,10 @@
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.2",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "typescript": "^5",
