--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.0",
+    "remove": "^0.1.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "prisma": "^6.2.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
